--- a/AppsAndroid/Organizze/app/src/main/AndroidManifest.xml
+++ b/AppsAndroid/Organizze/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".CadastroActivity"
+            android:name="activity.CadastroActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
